# maestro

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  claude-launcher.cmd  claude-launcher.sh  eslint.config.js  index.html  install-protocol.sh  orchestrator-skill.md  package-lock.json  package.json  vite.config.js  vitest.config.js
.devmanager/: launch-4.cmd  launch-7.cmd  launch-9.cmd  launch.cmd  state.json
.devmanager/notes/: 4.md  7.md  9.md
.devmanager/progress/: 7.json  9.json  arrange.json
.github/workflows/: ci.yml
apps/tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: main.rs
apps/tauri/src-tauri/src/commands/: attachments.rs  backup.rs  browse.rs  git.rs  launch.rs  misc.rs  mod.rs  progress.rs  projects.rs  skills.rs  state.rs  watcher.rs
decisions/: versioning-strategy.md
server/: api.js  dialogs.js  index.js  merge-safe.cjs  process.js  queue-next.cjs  task-done.cjs  task-start.cjs  validate.js  watcher.js
server/__tests__/: api.test.js  dialogs.test.js
server/routes/: attachments.js  backups.js  errors.js  launch.js  projects.js  quality.js  release.js  skills.js  state.js
spec/: websocket-protocol.md
src/: App.jsx  App.tsx  api.ts  autofix.js  autofix.ts  codehealth.js  codehealth.ts  components.css  fs.js  fs.ts  main.tsx  orchestrator.js  orchestrator.ts  release.ts  skills.ts  styles.css  templates.ts  validate.js  validate.ts  variables.css
src/__tests__/: computePhases.test.ts  devmanager-scripts.test.ts  (+12 more)
(+109 files in other folders)
